# jemaro_days_2025

./: README.md  config_zoe.rviz
car_control/launch/: car_control.launch.py
catmux_config/: config.yaml  config_debug.yaml
clean_point_cloud/: CMakeLists.txt  package.xml
clean_point_cloud/launch/: clean_pointcloud_with_downsampling.launch.py
clean_point_cloud/src/: clean_point_cloud_node.cpp
data/rosbag2_2025_07_09-11_48_02/: metadata.yaml  rosbag2_2025_07_09-11_48_02_0.db3
lane_switch/: CMakeLists.txt  package.xml
lane_switch/launch/: lane_switch.launch.py  lane_switch.launch.xml
lane_switch/src/: lane_switch_node.cpp
object_detection/: CMakeLists.txt  package.xml
object_detection/launch/: config_zoe.rviz  object_detection.launch.py
object_detection/src/: cone_detection_node.cpp  cone_detection_pcl.cpp
